gitops/apps/static-site/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-hello-prefix
  namespace: static-site
spec:
  stripPrefix:
    prefixes:
      - /hello
