gitops/apps/static-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site
  namespace: static-site
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
        - image: dockersamples/static-site
          name: static-site
          ports:
            - containerPort: 80
