gitops/apps/static-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site
  namespace: static-site
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: static-site
