gitops/apps/static-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site
  namespace: static-site
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: static-site-strip-hello-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: demo.quezadasubiabre.com
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: static-site
                port:
                  number: 80
